# llvm-project

./: .bazelrc  .gitignore  WORKSPACE  llvm.bzl  workspace.bzl
llvm/: BUILD.bazel
llvm/test/: lit.site.cfg.py.in
mlir/: BUILD  tblgen.bzl
mlir/include/mlir/Dialect/Linalg/IR/: LinalgNamedStructuredOpsSpec.tc
mlir/include/mlir/Dialect/StandardOps/IR/: Ops.td
mlir/lib/Dialect/StandardOps/IR/: Ops.cpp
mlir/test/: BUILD
mlir/test/Dialect/Linalg/: vectorization.mlir
mlir/test/Dialect/Standard/: invalid.mlir
utils/bazel/: .bazelignore  .bazelrc  README.md  WORKSPACE
utils/bazel/llvm-project-overlay/: .bazelignore  run_binary_test.bzl
utils/bazel/llvm-project-overlay/lld/: BUILD.bazel
utils/bazel/llvm-project-overlay/llvm/include/llvm/Config/: config.h  llvm-config.h
utils/bazel/llvm-project-overlay/llvm/test/: BUILD.bazel
